test/resources/reproducer-fix.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-kne-trigger-kn-channel
spec:
  host: "default-kne-trigger-kn-channel.test.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
